test/org/midica/testfiles/failing/sk-field-with-crlf.midica
INCLUDE inc/instruments.midica

0 c /4
*

META
	copyright   (c) test
	copyright   2nd line
	title       Title with tab	!
	composer    Wolfgang Amadeus Mozart
	
	SOFT_KARAOKE
		version    0100
		language   ENGL
		title      sk\rtitle
		author     the kar author
		copyright  sk-copyright
		info       info 1
		info       info 2
		info       info 3
	END
	
	composer    Haydn
	lyrics      Some\One
	artist      {Someone} [Else]
END

0  c  /4  l=\test1
0  c  /4  l=\test2
0  c  /4  l=/test3
0  c  /4  l=_test4
0  c  /4  l=_test5
